# tops-woker

./: .dockerignore  BENCHMARKING.md  CI_CD_GUIDE.md  Cargo.toml  DOCKER_GUIDE.md  Dockerfile  Dockerfile.cpu  PRODUCTION_FEATURES.md  PRODUCTION_FEATURES_SUMMARY.md  PROMETHEUS_METRICS.md  README.md  benchmark.sh  benchmark_results.csv  docker-build.sh  docker-compose.yml  docker-run.sh  env.example  quick_benchmark.sh  quick_test.sh  simple_benchmark.sh  test_config.sh  test_production_features.sh
.github/workflows/: ci-cd.yml  dependency-scan.yml  deploy.yml
k8s/base/: configmap.yaml  deployment-verifier.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service-verifier.yaml  service-worker.yaml
k8s/overlays/production/: kustomization.yaml  replicas-patch.yaml
k8s/overlays/staging/: kustomization.yaml  replicas-patch.yaml
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  tops-worker-dashboard.json
scripts/: deploy-production.sh  deploy-staging.sh  rollback.sh
src/: attempt.rs  cl_kernels.rs  config.rs  cpu.rs  error_handling.rs  gpu.rs  gpu_cuda.rs  health.rs  lib.rs  main.rs  metrics.rs  prng.rs  prometheus_metrics.rs  server.rs  signing.rs  types.rs
verifier/: Dockerfile  index.js  package-lock.json  package.json
