[package]
name = "tops-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_xoshiro = "0.6"
ocl = "0.19"             # OpenCL (GPU backend)
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] } # secp256k1 signing (peaq uses secp256k1)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13", features = ["process"] }
prometheus-client = "0.22"

[dependencies.cudarc]
version = "0.10"
optional = true

[features]
cpu-fallback = []        # enable if no GPU present
cuda = ["cudarc"]       # NVIDIA CUDA backend via cudarc
