[package]
name = "tops-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.8"
hex = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rand_xoshiro = "0.6"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13", features = ["process"] }
prometheus-client = "0.22"
sha2 = "0.10"

# Conditional dependencies
ocl = { version = "0.19", optional = true }

[features]
default = []
cuda = ["cudarc"]
cpu-fallback = []

# When not using cpu-fallback, enable OpenCL
gpu = ["ocl"]

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.10", optional = true }
